Resolves issue with z-indexs

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  z-index: 10;
+  z-index: 20;
   padding: 0 4rem;
   height: 10rem;
   box-sizing: border-box;
